        2.6.18-8.1.15.EL5 (RHEL 5).
        2.6.18.8 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.9-42.0.10.EL (RHEL 4),
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.2-cfs4
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : minor
Bugzilla   : 14418
Frequency  : only at startup
Description: not alloc memory with spinlock held.
Details    : allocation memory with GFP_KERNEL can produce sleep deadlock,
             if any spinlock held.

Severity   : enhancement
Bugzilla   : 12211
Description: make lustre randomly fail allocating memory
Details    : Make lustre randomly failed allocating memory for testing purpose.

Severity   : enhancement
Bugzilla   : 12702
Description: lost problems with lov objid file
Details    : Fixes some scability and access to not inited memory problems 
             in work with lov objdid file.

Severity   : major
Frequency  : always
Bugzilla   : 14270
Description: lfs find does not continue on file error
Details    : Continue other files processing when a file/dir is absent.

Severity   : normal
Bugzilla   : 11791
Description: Inconsistent usage of lustre_pack_reply()
Details    : Standardize the usage of lustre_pack_reply() such that it
             always generate a CERROR on failure.

Severity   : major
Frequency  : occasional
Bugzilla   : 13917
Description: MDS hang or stay in waiting lock
Details    : If client receive lock with CBPENDING flag ldlm need send lock
	     cancel as separate rpc, to avoid situation when cancel request
	     can't processed due all i/o threads stay in wait lock.

Severity   : normal
Bugzilla   : 13969
Description: Update to RHEL5 kernel 2.6.18-8.1.15.el5.

Severity   : normal
Bugzilla   : 13874
Description: Update to SLES10 SP1 kernel 2.6.16.53-0.16

Severity   : normal
Bugzilla   : 13889